# rusteroids

./: .gitignore  Cargo.toml  README.md  build.rs
src/: actor_system.rs  asteroid.rs  asteroids.rs  bullet.rs  bullets.rs  debug_info.rs  frame_counter.rs  main.rs  player.rs  polygon.rs  transform.rs
src/game_object/: mod.rs
src/old/: asteroid.rs  bullet.rs  bullets.rs  controller.rs  transform.rs
src/player/: mod.rs
src/player/rendering/: mod.rs
src/thing/: mod.rs
