[package]
name = "rusteroids"
version = "0.1.0"
authors = ["Cam Jackson <camjackson89@gmail.com>"]

[dependencies]
kay = { git = "https://github.com/citybound/citybound" }
stagemaster = { git = "https://github.com/citybound/citybound" }
monet = { git = "https://github.com/citybound/citybound" }
compact = { git = "https://github.com/citybound/citybound" }
compact_macros = { git = "https://github.com/citybound/citybound" }

[build-dependencies]
kay_codegen = { git = "https://github.com/citybound/citybound" }
